added cors orgins to accpet all location and headers